tryed to fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
   /* max-width: 1280px; */
-  
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  overflow-x: hidden
+  /* overflow-x: scroll  */
+
 }
